fix chapter image overflow

--- a/assets/sass/communicationpublique-theme/styles/blocks.sass
+++ b/assets/sass/communicationpublique-theme/styles/blocks.sass
@@ -175,7 +175,7 @@
                 width: columns(6)
         &--with-image
             .chapter figure
-                margin-right: calc(-1 * var(--column-width))
+                margin-right: calc(-1 * var(--grid-gutter))
                 width: columns(5)
 
 // list blocks
